
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 MAR 23b
  * in model/chem/_Air_Plasma_11s/boyd2007.c, park1993.c, lenard1964.c
    - added find_Qei_*() and find_dQei_dx_*()
  * in model/chem/_Air_Plasma_11s/dunnkang1973.c
    - in find_Qei_DunnKang1973() and find_dQei_dx_DunnKang1973(), fixed a typo: 3.6e31/sqr(calA)
      should be 3.6e31/calA and 1.1e32/sqr(calA) should be 1.1e32/calA
  * in model/chem/_Air_Plasma_11s/chem.c
    - renamed TOWNSENDIONIZATION to ADDITIONALREACTION
    - changed the rates for ADDITIONALREACTION[5]  and ADDITIONALREACTION[6] using BOLSIG+
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - changed the rates for the 5th and 6th additional reaction using BOLSIG+
    

2021 MAR 23a
  * in read_data_file(), fixed a few bugs related to read_data_file_mpi when BDF is the chosen
    time stepping method


2021 MAR 21a
  * in src/common.h
    - added dim_t Esmoothedmem to npbs_t
  * in model/thermo/_generic/thermo.c
    - in _ionizationpotential(), added the ionization energies of species O and N
  * in model/share/emfield_share.c
    - in _E_dot_Je_over_mueNe(), now calls find_E_smoothed() instead of find_E()
  * in model/emfield/_*/emfield.c
    - added find_E_smoothed() which returns Esmoothedmem
    - in find_prim_emfield_mem_1(), added code to find Esmoothedmem
  * in model/chem/_Air_Plasma_11s/dunnkang1973.c
    - implemented clipping of Te so that it doesn't not exceed 60000 K when determining the 
      electron impact ionization reactions
    - added find_Qei_DunnKang1973() and find_dQei_dx_DunnKang1973()
  * in model/chem/_Air_Plasma_11s/chem.c
    - added TOWNSENDREACTION[5] and TOWNSENDREACTION[6] for Townsend ionization of N and O function
      of the reduced electric field